syntax = "proto2";

option cc_enable_arenas = true;

package muan.wpilib.gyro;

enum GyroState {
  kUninitialized = 0;
  kInitialized = 1;
  kCalibrating = 2;
  kRunning = 4;
  kKilled = 5;
}

message GyroMessage {
  required uint64 timestamp = 1;
  required GyroState state = 2;

  optional double current_angle = 3;
  optional double current_angular_velocity = 4;

  optional double calibration_time_left = 5;
}
